--- a/website/style.css
+++ b/website/style.css
@@ -46,9 +46,20 @@ header{
 img{
     width: 200px;
     margin-left: 30px;
-    
+    border: 4px solid#1995AD;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px #A1D6E2;
 }
 #elso{
     height: 500px;
     vertical-align: middle;
+}
+#romania{
+    position: absolute;
+    right: 625px;
+    padding: 5px;
+}
+h1{
+    margin-bottom: 100px;
+    margin-top: 60px;
 }
